# clickhouse-migrator

./: .gitignore  Dockerfile  README.md  pyproject.toml
env/: .env.example
src/clickhouse_migrator/: cli.py  tool.py
tests/: README.md  conftest.py  test_cli.py  test_tool.py
