[tool.poetry]
name = "clickhouse-migrator"
version = "0.1.15"
description = ""
authors = ["Mitgo DataLake Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
clickhouse-driver = "0.2.10"
pandas = "2.2.2"
loguru = "0.7.2"
python-dotenv = "1.0.1"
click = "8.1.7"
tabulate = "0.9.0"

[tool.poetry.group.dev.dependencies]
black = "~24.8.0"
isort = "~5.13.2"
pytest = "~8.3.2"
pytest-mock = "~3.14.0"

[tool.poetry.scripts]
clickhouse-migrator = "clickhouse_migrator:migrator"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
